@@ -1,6 +1,11 @@
 v3.10.0 (XXXX-XX-XX)
 --------------------
 
+* Fixed SEARCH-366: Fixed extracting sub-attributes using projections for the
+  `_id` attribute (e.g. `RETURN doc.sub._id`).
+
+* Fixed SEARCH-368: Fixed handling of array comparison for inverted index.
+
 * Fix get snapshot on single server for search-alias view when index was removed.
 
 * Fix waitForSync options for SEARCH in non-maintainer build.
@@ -73,6 +78,7 @@ v3.10.0 (XXXX-XX-XX)
   `K_PATHS` in an AQL Query and the query itself produced warnings during
   execution, the type has been wrongly reported. It reported always with
   `SHORTEST_PATH` and not the specific used one.
+
 * Fixed SEARCH-368 Fixed handling of array comparison for inverted index.
 
 * SEARCH-357: Added SUBSTRING_BYTES function.
